--- a/src/components/ImageCover/ImageCover.module.scss
+++ b/src/components/ImageCover/ImageCover.module.scss
@@ -1,7 +1,7 @@
 .imageContainer {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 70vh;
   
     .bgImage {
       width: 100%;
